--- a/Quantumutl_X.conf
+++ b/Quantumutl_X.conf
@@ -38,6 +38,9 @@ Block100= type=http-response,pattern=^https?:\/\/tagit\.hyhuo\.com\/cypt\/block1
 ^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject-200
 ^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject-200
 
+#TestFlight账户管理
+TestFlight = type=http-request,pattern=^https:\/\/testflight\.apple\.com\/v\d\/(app|account|invite)s\/,requires-body=1,script-path=https://raw.githubusercontent.com/wuai19/rewrite/mian/TestFlightAccount.js
+
 #**************************************#
 [MITM]
-hostname = %APPEND% api*.speedtest.cn, buy.itunes.apple.com, bzpp2.iwzbz.com, api.revenuecat.com, *.cyapi.cn, adx.sogaha.cn, spclient.wg.spotify.com, tagit.hyhuo.com, redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com
+hostname = %APPEND% api*.speedtest.cn, buy.itunes.apple.com, bzpp2.iwzbz.com, api.revenuecat.com, *.cyapi.cn, adx.sogaha.cn, spclient.wg.spotify.com, tagit.hyhuo.com, redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com, testflight.apple.com
