--- a/自己配置.conf
+++ b/自己配置.conf
@@ -30,10 +30,20 @@ test-timeout = 5
 #vmess模板 vmess+ws+tls
 #名 = vmess, 域名, 8443, username=uuid, tls=true, vmess-aead=true, tls13=false, ws=true, ws-path=/, sni=域名, ws-headers=Host:域名, skip-cert-verify=false, tfo=false, udp-relay=false
 
+#WireGuard
+warp = wireguard, section-name = Cloudflare, test-url=http://cp.cloudflare.com/generate_204
+
+[WireGuard Cloudflare]
+private-key = mORjDTqffykoHh36Dfhq3+zjppW2f8zxUCFPx2YABF4=
+self-ip = 172.16.0.2
+self-ip-v6 = 2606:4700:110:8b9f:f6ff:5adc:4344:90df/128
+dns-server = 162.159.36.1, 2606:4700:4700::1111
+mtu = 1280
+peer = (public-key = bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=, allowed-ips = 0.0.0.0/0, ::/0, endpoint = 162.159.195.67:1070)
 
 [Proxy Group]
-节点选择 = select,DIRECT
-Spotify = select,DIRECT
+节点选择 = select,warp
+Spotify = select,节点选择
 Facebook = select,节点选择
 PayPal = select,节点选择
 OpenAi = select,节点选择
