--- a/冲浪板配置.conf
+++ b/冲浪板配置.conf
@@ -32,6 +32,15 @@ test-timeout = 5
 
 #WireGuard
 warp = wireguard, section-name = Cloudflare, test-url=http://cp.cloudflare.com/generate_204
+warp2 = wireguard, section-name = Cloudflare, test-url=http://cp.cloudflare.com/generate_204
+
+[WireGuard Cloudflare]
+private-key = kP78zaYqGjTCAHmKLZE3dY8YUzNYbQjcR/sGv9KUFko=
+self-ip = 172.16.0.2
+self-ip-v6 = 2606:4700:110:8b9f:f6ff:5adc:4344:90df/128
+dns-server = 162.159.36.1, 2606:4700:4700::1111
+mtu = 1280
+peer = (public-key = bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=, allowed-ips = 0.0.0.0/0, ::/0, endpoint = 162.159.195.67:1070)
 
 [WireGuard Cloudflare]
 private-key = mORjDTqffykoHh36Dfhq3+zjppW2f8zxUCFPx2YABF4=
@@ -42,7 +51,7 @@ mtu = 1280
 peer = (public-key = bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=, allowed-ips = 0.0.0.0/0, ::/0, endpoint = 162.159.195.67:1070)
 
 [Proxy Group]
-节点选择 = select,warp
+节点选择 = select,warp,warp2
 Spotify = select,节点选择
 Facebook = select,节点选择
 PayPal = select,节点选择
