--- a/Quantumult_PZ.conf
+++ b/Quantumult_PZ.conf
@@ -76,7 +76,7 @@ https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/Tik
 [rewrite_remote]
 # 远程脚本
 # > 重写订阅
-
+https://raw.githubusercontents.com/Peng-YM/Sub-Store/master/config/QX.snippet, tag=sub store, update-interval=172800, opt-parser=true, enabled=true
 [server_local]
 # 本地节点
 
