--- a/Clash_Meta.yaml
+++ b/Clash_Meta.yaml
@@ -4,27 +4,40 @@ allow-lan: true
 mode: Rule
 log-level: info
 external-controller: :9090
+ipv6: true
+unified-delay: true
+########################
 dns:
   enabled: true
   nameserver:
-    - 119.29.29.29
     - 223.5.5.5
+    - 119.29.29.29
+    - 114.114.114.114
+  nameserver-policy:
+    '+.taobao.com': '223.5.5.5'
+    '+.jd.com': '119.28.28.28'
+    '+.qq.com': '119.29.29.29'
+    '+.tencent.com': '119.29.29.29'
+    '+.weixin.com': '119.29.29.29'
+    '+.bilibili.com': '119.29.29.29'
+    '+.163.com': '119.29.29.29'
   fallback:
     - 8.8.8.8
     - 8.8.4.4
     - tls://1.0.0.1:853
     - tls://dns.google:853
-       
+      
 store-selected: true
-
+##########################
 proxies:
 #自建节点
 
+  - {name: "Warp+",type: wireguard,server: 162.159.192.87,port: 1074,ip: 172.16.0.2,ipv6: fd01:5ca1:ab1e:80fa:ab85:6eea:213f:f4a5,private-key: yLDrcATfrkZxhfdEQM+xlMY+zeOtbX9rvVzY98AjMlA=,public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=,remote-dns-resolve: false,udp: true}
 
 #远程代理集
 p: &p
   type: http
-  interval: 1800
+  interval: 86400
   health-check:
     enable: true
     url: 'http://www.gstatic.com/generate_204'
@@ -40,18 +53,27 @@ proxy-providers:
 
   机场1: 
     <<: *p
-    url: '在这里填写机场订阅链接'
+    url: '机场订阅链接'
     path: "./proxy_providers/机场1.yaml"
-    #path一般不需要改，反正又看不到
     
-    #如果觉得不好看，也可以把下面的多余的删掉，use的锚点里面的提供商删掉就
-
+  机场2:
+    <<: *p
+    url: '机场订阅链接'
+    path: "./proxy_providers/机场2.yaml"
+####################################
 proxy-groups:
 
   - name: 🚀手动选择
     type: select
     proxies:
     include-all: true
+  
+  - name: ♻自动选择
+    type: url-test
+    include-all: true
+    url: http://www.gstatic.com/generate_204
+    interval: 300
+    tolerance: 50
 
   - name: 🧿Spotify
     type: select
@@ -62,7 +84,7 @@ proxy-groups:
   - name: 📘Facebook
     type: select
     proxies:
-      - 🚀手动选择
+      - EU1-LON-kvm
 
   - name: 🌀OpenAI
     type: select
@@ -78,12 +100,14 @@ proxy-groups:
     type: select
     proxies:
       - 🚀手动选择
+      - ♻自动选择
 
   - name: 🐟漏网之鱼
     type: select
     proxies:
       - 🚀手动选择
-    
+      - ♻自动选择
+#########################
 rule-providers:
 
   Spotify:
@@ -110,7 +134,7 @@ rule-providers:
     <<: *c
     url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Global/Global_Classical.yaml'
     path: './Global.yaml'
-
+#########################
 rules:
 
   - RULE-SET,Spotify,🧿Spotify
