--- a/Clash_Meta.yaml
+++ b/Clash_Meta.yaml
@@ -60,7 +60,7 @@ proxy-providers:
     <<: *p
     url: '机场订阅链接'
     path: "./proxy_providers/机场2.yaml"
-🌹####################################分界线🌹
+🌹#############################分界线🌹
 proxy-groups:
 
   - name: 🚀手动选择
