--- a/Clash_Meta.yaml
+++ b/Clash_Meta.yaml
@@ -28,7 +28,7 @@ dns:
     - tls://dns.google:853
       
 store-selected: true
-🌹##########################分界线🌹
+🌹########################分界线🌹
 proxies:
 #自建节点
 
