--- a/Clash_Meta.yaml
+++ b/Clash_Meta.yaml
@@ -3,7 +3,7 @@ socks-port: 7891
 allow-lan: true
 mode: Rule
 log-level: info
-external-controller: :9090
+external-controller: 0.0.0.0:9090
 ipv6: true
 unified-delay: true
 #🌹#######################分界线🌹
